# safe-fork

./: Cargo.toml  README.md
src/: lib.rs
tests/: multi_threaded.rs  single_threaded.rs
